Task1: Feature: SimpleFileMerger and other impl