@@ -27,6 +27,9 @@ java {
 
 test {
     useJUnitPlatform()
+    jvmArgs = [
+        '-XX:+EnableDynamicAgentLoading'
+    ]
     testLogging {
         events "passed", "skipped", "failed"
         exceptionFormat = 'full'
